--- a/res/layout.html
+++ b/res/layout.html
@@ -32,8 +32,8 @@
 			<tr>
 				<th>-1</th>
 				<td>&nbsp;</td>
-				<td>Length</td>
-				<td>Density</td>
+				<td>Length (mm)</td>
+				<td>Density (g/m)</td>
 				<td colspan="3">Edit</td>
 			</tr>
 			<tr>
@@ -56,8 +56,8 @@
 			<tr>
 				<th>2</th>
 				<td rowspan="4">#1</td>
-				<td rowspan="4"><input type="text" value="648" />&nbsp;mm</td>
-				<td rowspan="4"><input type="text" value="2" />&nbsp;g/m</td>
+				<td rowspan="4"><input type="text" value="864" /></td>
+				<td rowspan="4"><input type="text" value="6" /></td>
 				<td rowspan="4"><input type="button" value="Delete" /></td>
 				<td>&nbsp;</td>
 			</tr>
@@ -76,8 +76,8 @@
 			<tr>
 				<th>6</th>
 				<td rowspan="4">#2</td>
-				<td rowspan="4">648&nbsp;mm</td>
-				<td rowspan="4">2&nbsp;g/m</td>
+				<td rowspan="4">862</td>
+				<td rowspan="4">5</td>
 				<td rowspan="4"><input type="button" value="Delete" /></td>
 			</tr>
 			<tr>
@@ -94,8 +94,8 @@
 			<tr>
 				<th>10</th>
 				<td rowspan="4">#3</td>
-				<td rowspan="4">648&nbsp;mm</td>
-				<td rowspan="4">2&nbsp;g/m</td>
+				<td rowspan="4">860</td>
+				<td rowspan="4">4</td>
 				<td rowspan="4"><input type="button" value="Delete" /></td>
 			</tr>
 			<tr>
@@ -112,8 +112,8 @@
 			<tr>
 				<th>14</th>
 				<td rowspan="4">#4</td>
-				<td rowspan="4">648&nbsp;mm</td>
-				<td rowspan="4">2&nbsp;g/m</td>
+				<td rowspan="4">858</td>
+				<td rowspan="4">3</td>
 				<td rowspan="4"><input type="button" value="Delete" /></td>
 			</tr>
 			<tr>
@@ -164,7 +164,7 @@
 				<td>&nbsp;</td>
 				<td colspan="2">Play</td>
 				<td>Note</td>
-				<td>Frequency</td>
+				<td>Frequency (Hz)</td>
 				<td colspan="2">Transpose</td>
 				<td colspan="3">Edit</td>
 			</tr>
@@ -198,8 +198,8 @@
 				<td rowspan="4">#1</td>
 				<td rowspan="16"><input type="button" value="Play" /></td>
 				<td rowspan="4"><input type="button" value="Play" /></td>
-				<td rowspan="4"><input type="text" value="A4" /></td>
-				<td rowspan="4"><input type="text" value="440" />&nbsp;Hz</td>
+				<td rowspan="4"><input type="text" value="E2" /></td>
+				<td rowspan="4"><input type="text" value="82" /></td>
 				<td rowspan="2"><input type="button" value="Up" /></td>
 				<td rowspan="8"><input type="button" value="Up" /></td>
 				<td rowspan="4"><input type="button" value="Delete" /></td>
@@ -222,8 +222,8 @@
 				<th>6</th>
 				<td rowspan="4">#2</td>
 				<td rowspan="4"><input type="button" value="Play" /></td>
-				<td rowspan="4">A<sub>4</sub></td>
-				<td rowspan="4">440&nbsp;Hz</td>
+				<td rowspan="4">A<sub>2</sub></td>
+				<td rowspan="4">110</td>
 				<td rowspan="2"><input type="button" value="Up" /></td>
 				<td rowspan="4"><input type="button" value="Delete" /></td>
 			</tr>
@@ -243,8 +243,8 @@
 				<th>10</th>
 				<td rowspan="4">#3</td>
 				<td rowspan="4"><input type="button" value="Play" /></td>
-				<td rowspan="4">A<sub>4</sub></td>
-				<td rowspan="4">440&nbsp;Hz</td>
+				<td rowspan="4">D<sub>3</sub></td>
+				<td rowspan="4">147</td>
 				<td rowspan="2"><input type="button" value="Up" /></td>
 				<td rowspan="8"><input type="button" value="Down" /></td>
 				<td rowspan="4"><input type="button" value="Delete" /></td>
@@ -265,8 +265,8 @@
 				<th>14</th>
 				<td rowspan="4">#4</td>
 				<td rowspan="4"><input type="button" value="Play" /></td>
-				<td rowspan="4">A<sub>4</sub></td>
-				<td rowspan="4">440&nbsp;Hz</td>
+				<td rowspan="4">G<sub>3</sub></td>
+				<td rowspan="4">196</td>
 				<td rowspan="2"><input type="button" value="Up" /></td>
 				<td rowspan="4"><input type="button" value="Delete" /></td>
 			</tr>
@@ -305,6 +305,148 @@
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
+				<td>&nbsp;</td>
+			</tr>
+		</table>
+		<table>
+			<tr>
+				<th>&nbsp;</th>
+				<th>0</th>
+				<th>1</th>
+				<th>2</th>
+				<th>3</th>
+				<th>4</th>
+				<th>5</th>
+				<th>6</th>
+				<th>7</th>
+				<th>8</th>
+				<th>9</th>
+				<th>10</th>
+				<th>11</th>
+				<th>12</th>
+				<th>13</th>
+				<th>14</th>
+			</tr>
+			<tr>
+				<th>-2</th>
+				<td>&nbsp;</td>
+				<td rowspan="2">Tuning</td>
+				<td colspan="6">Transpositions</td>
+				<td colspan="6">Tensions (N)</td>
+				<td rowspan="2">Edit</td>
+			</tr>
+			<tr>
+				<th>-1</th>
+				<td>&nbsp;</td>
+				<td>#1</td>
+				<td>#2</td>
+				<td>#3</td>
+				<td>#4</td>
+				<td>&sum;&hellip;</td>
+				<td>&sum;|&hellip;|</td>
+				<td>#1</td>
+				<td>#2</td>
+				<td>#3</td>
+				<td>#4</td>
+				<td>&sum;&hellip;</td>
+				<td>&sum;|&hellip;|</td>
+			</tr>
+			<tr>
+				<th>0</th>
+				<td rowspan="2">#1</td>
+				<td rowspan="2">Bass Guitar Standard</td>
+				<td rowspan="2">E2</td>
+				<td rowspan="2">A2</td>
+				<td rowspan="2">D3</td>
+				<td rowspan="2">G3</td>
+				<td rowspan="2">&nbsp;</td>
+				<td rowspan="2">&nbsp;</td>
+				<td rowspan="2">122</td>
+				<td rowspan="2">180</td>
+				<td rowspan="2">255</td>
+				<td rowspan="2">339</td>
+				<td rowspan="2">&nbsp;</td>
+				<td rowspan="2">&nbsp;</td>
+				<td>&nbsp;</td>
+			</tr>
+			<tr>
+				<th>1</th>
+				<td rowspan="3"><input type="button" value="Swap" /></td>
+			</tr>
+			<tr>
+				<th>2</th>
+				<td>&nbsp;</td>
+				<td>&nbsp;</td>
+				<td>-4</td>
+				<td>-2</td>
+				<td>-2</td>
+				<td>0</td>
+				<td>-8</td>
+				<td>8</td>
+				<td>-45</td>
+				<td>-37</td>
+				<td>-53</td>
+				<td>0</td>
+				<td>-135</td>
+				<td>135</td>
+			</tr>
+			<tr>
+				<th>3</th>
+				<td rowspan="2">#2</td>
+				<td rowspan="2">Bass Guitar Open C</td>
+				<td rowspan="2">C2</td>
+				<td rowspan="2">G2</td>
+				<td rowspan="2">C3</td>
+				<td rowspan="2">G3</td>
+				<td rowspan="2">&nbsp;</td>
+				<td rowspan="2">&nbsp;</td>
+				<td rowspan="2">77</td>
+				<td rowspan="2">143</td>
+				<td rowspan="2">202</td>
+				<td rowspan="2">339</td>
+				<td rowspan="2">&nbsp;</td>
+				<td rowspan="2">&nbsp;</td>
+			</tr>
+			<tr>
+				<th>4</th>
+				<td rowspan="3"><input type="button" value="Swap" /></td>
+			</tr>
+			<tr>
+				<th>5</th>
+				<td>&nbsp;</td>
+				<td>&nbsp;</td>
+				<td>+2</td>
+				<td>0</td>
+				<td>0</td>
+				<td>-2</td>
+				<td>0</td>
+				<td>4</td>
+				<td>20</td>
+				<td>0</td>
+				<td>0</td>
+				<td>-70</td>
+				<td>-50</td>
+				<td>90</td>
+			</tr>
+			<tr>
+				<th>6</th>
+				<td rowspan="2">#3</td>
+				<td rowspan="2">Bass Guitar Step Down</td>
+				<td rowspan="2">D2</td>
+				<td rowspan="2">G2</td>
+				<td rowspan="2">C3</td>
+				<td rowspan="2">F3</td>
+				<td rowspan="2">&nbsp;</td>
+				<td rowspan="2">&nbsp;</td>
+				<td rowspan="2">97</td>
+				<td rowspan="2">143</td>
+				<td rowspan="2">202</td>
+				<td rowspan="2">269</td>
+				<td rowspan="2">&nbsp;</td>
+				<td rowspan="2">&nbsp;</td>
+			</tr>
+			<tr>
+				<th>7</th>
 				<td>&nbsp;</td>
 			</tr>
 		</table>
