--- a/res/layout.html
+++ b/res/layout.html
@@ -28,16 +28,19 @@
 				<th>3</th>
 				<th>4</th>
 				<th>5</th>
+				<th>6</th>
 			</tr>
 			<tr>
 				<th>-1</th>
 				<td>&nbsp;</td>
 				<td>Length (mm)</td>
 				<td>Density (g/m)</td>
+				<td>Maximum Tension (N)</td>
 				<td colspan="3">Edit</td>
 			</tr>
 			<tr>
 				<th>0</th>
+				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
@@ -52,12 +55,14 @@
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
+				<td>&nbsp;</td>
 			</tr>
 			<tr>
 				<th>2</th>
 				<td rowspan="4">#1</td>
 				<td rowspan="4"><input type="text" value="864" /></td>
 				<td rowspan="4"><input type="text" value="6" /></td>
+				<td rowspan="4"><input type="text" value="260" /></td>
 				<td rowspan="4"><input type="button" value="Delete" /></td>
 				<td>&nbsp;</td>
 			</tr>
@@ -78,6 +83,7 @@
 				<td rowspan="4">#2</td>
 				<td rowspan="4">862</td>
 				<td rowspan="4">5</td>
+				<td rowspan="4">240</td>
 				<td rowspan="4"><input type="button" value="Delete" /></td>
 			</tr>
 			<tr>
@@ -96,6 +102,7 @@
 				<td rowspan="4">#3</td>
 				<td rowspan="4">860</td>
 				<td rowspan="4">4</td>
+				<td rowspan="4">220</td>
 				<td rowspan="4"><input type="button" value="Delete" /></td>
 			</tr>
 			<tr>
@@ -114,6 +121,7 @@
 				<td rowspan="4">#4</td>
 				<td rowspan="4">858</td>
 				<td rowspan="4">3</td>
+				<td rowspan="4">200</td>
 				<td rowspan="4"><input type="button" value="Delete" /></td>
 			</tr>
 			<tr>
@@ -135,9 +143,11 @@
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
+				<td>&nbsp;</td>
 			</tr>
 			<tr>
 				<th>19</th>
+				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
