Improved schema processing.

--- a/res/layout.html
+++ b/res/layout.html
@@ -209,7 +209,7 @@
 				<td rowspan="16"><input type="button" value="Play" /></td>
 				<td rowspan="4"><input type="button" value="Play" /></td>
 				<td rowspan="4"><input type="text" value="E2" /></td>
-				<td rowspan="4"><input type="text" value="82" /></td>
+				<td rowspan="4"><input type="text" value="82" readonly="readonly" /></td>
 				<td rowspan="2"><input type="button" value="Up" /></td>
 				<td rowspan="8"><input type="button" value="Up" /></td>
 				<td rowspan="4"><input type="button" value="Delete" /></td>
