Implemented most of the magic panels.

--- a/res/layout.html
+++ b/res/layout.html
@@ -31,7 +31,7 @@
 				<th>6</th>
 			</tr>
 			<tr>
-				<th>-1</th>
+				<th>0</th>
 				<td>&nbsp;</td>
 				<td>Length (mm)</td>
 				<td>Density (g/m)</td>
@@ -39,114 +39,70 @@
 				<td colspan="3">Edit</td>
 			</tr>
 			<tr>
-				<th>0</th>
-				<td>&nbsp;</td>
-				<td>&nbsp;</td>
-				<td>&nbsp;</td>
-				<td>&nbsp;</td>
-				<td rowspan="4"><input type="button" value="Insert" /></td>
-				<td>&nbsp;</td>
-				<td>&nbsp;</td>
-			</tr>
-			<tr>
 				<th>1</th>
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
+				<td rowspan="2"><input type="button" value="Insert" /></td>
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 			</tr>
 			<tr>
 				<th>2</th>
-				<td rowspan="4">#1</td>
-				<td rowspan="4"><input type="text" value="864" /></td>
-				<td rowspan="4"><input type="text" value="6" /></td>
-				<td rowspan="4"><input type="text" value="260" /></td>
-				<td rowspan="4"><input type="button" value="Delete" /></td>
+				<td rowspan="2">#1</td>
+				<td rowspan="2"><input type="text" value="864" /></td>
+				<td rowspan="2"><input type="text" value="6" /></td>
+				<td rowspan="2"><input type="text" value="260" /></td>
+				<td rowspan="2"><input type="button" value="Delete" /></td>
 				<td>&nbsp;</td>
 			</tr>
 			<tr>
 				<th>3</th>
-				<td>&nbsp;</td>
+				<td rowspan="2"><input type="button" value="Insert" /></td>
+				<td rowspan="2"><input type="button" value="Swap" /></td>
 			</tr>
 			<tr>
 				<th>4</th>
-				<td rowspan="4"><input type="button" value="Insert" /></td>
-				<td rowspan="4"><input type="button" value="Swap" /></td>
+				<td rowspan="2">#2</td>
+				<td rowspan="2">862</td>
+				<td rowspan="2">5</td>
+				<td rowspan="2">240</td>
+				<td rowspan="2"><input type="button" value="Delete" /></td>
 			</tr>
 			<tr>
 				<th>5</th>
+				<td rowspan="2"><input type="button" value="Insert" /></td>
+				<td rowspan="2"><input type="button" value="Swap" /></td>
 			</tr>
 			<tr>
 				<th>6</th>
-				<td rowspan="4">#2</td>
-				<td rowspan="4">862</td>
-				<td rowspan="4">5</td>
-				<td rowspan="4">240</td>
-				<td rowspan="4"><input type="button" value="Delete" /></td>
+				<td rowspan="2">#3</td>
+				<td rowspan="2">860</td>
+				<td rowspan="2">4</td>
+				<td rowspan="2">220</td>
+				<td rowspan="2"><input type="button" value="Delete" /></td>
 			</tr>
 			<tr>
 				<th>7</th>
+				<td rowspan="2"><input type="button" value="Insert" /></td>
+				<td rowspan="2"><input type="button" value="Swap" /></td>
 			</tr>
 			<tr>
 				<th>8</th>
-				<td rowspan="4"><input type="button" value="Insert" /></td>
-				<td rowspan="4"><input type="button" value="Swap" /></td>
+				<td rowspan="2">#4</td>
+				<td rowspan="2">858</td>
+				<td rowspan="2">3</td>
+				<td rowspan="2">200</td>
+				<td rowspan="2"><input type="button" value="Delete" /></td>
 			</tr>
 			<tr>
 				<th>9</th>
+				<td rowspan="2"><input type="button" value="Insert" /></td>
+				<td>&nbsp;</td>
 			</tr>
 			<tr>
 				<th>10</th>
-				<td rowspan="4">#3</td>
-				<td rowspan="4">860</td>
-				<td rowspan="4">4</td>
-				<td rowspan="4">220</td>
-				<td rowspan="4"><input type="button" value="Delete" /></td>
-			</tr>
-			<tr>
-				<th>11</th>
-			</tr>
-			<tr>
-				<th>12</th>
-				<td rowspan="4"><input type="button" value="Insert" /></td>
-				<td rowspan="4"><input type="button" value="Swap" /></td>
-			</tr>
-			<tr>
-				<th>13</th>
-			</tr>
-			<tr>
-				<th>14</th>
-				<td rowspan="4">#4</td>
-				<td rowspan="4">858</td>
-				<td rowspan="4">3</td>
-				<td rowspan="4">200</td>
-				<td rowspan="4"><input type="button" value="Delete" /></td>
-			</tr>
-			<tr>
-				<th>15</th>
-			</tr>
-			<tr>
-				<th>16</th>
-				<td rowspan="4"><input type="button" value="Insert" /></td>
-				<td>&nbsp;</td>
-			</tr>
-			<tr>
-				<th>17</th>
-				<td>&nbsp;</td>
-			</tr>
-			<tr>
-				<th>18</th>
-				<td>&nbsp;</td>
-				<td>&nbsp;</td>
-				<td>&nbsp;</td>
-				<td>&nbsp;</td>
-				<td>&nbsp;</td>
-				<td>&nbsp;</td>
-			</tr>
-			<tr>
-				<th>19</th>
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
@@ -170,7 +126,7 @@
 				<th>9</th>
 			</tr>
 			<tr>
-				<th>-1</th>
+				<th>0</th>
 				<td>&nbsp;</td>
 				<td colspan="2">Play</td>
 				<td>Note</td>
@@ -179,19 +135,6 @@
 				<td colspan="3">Edit</td>
 			</tr>
 			<tr>
-				<th>0</th>
-				<td>&nbsp;</td>
-				<td>&nbsp;</td>
-				<td>&nbsp;</td>
-				<td>&nbsp;</td>
-				<td>&nbsp;</td>
-				<td>&nbsp;</td>
-				<td>&nbsp;</td>
-				<td rowspan="4"><input type="button" value="Insert" /></td>
-				<td>&nbsp;</td>
-				<td>&nbsp;</td>
-			</tr>
-			<tr>
 				<th>1</th>
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
@@ -200,113 +143,76 @@
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
+				<td rowspan="2"><input type="button" value="Insert" /></td>
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 			</tr>
 			<tr>
 				<th>2</th>
-				<td rowspan="4">#1</td>
-				<td rowspan="16"><input type="button" value="Play" /></td>
-				<td rowspan="4"><input type="button" value="Play" /></td>
-				<td rowspan="4"><input type="text" value="E2" /></td>
-				<td rowspan="4"><input type="text" value="82" readonly="readonly" /></td>
-				<td rowspan="2"><input type="button" value="Up" /></td>
-				<td rowspan="8"><input type="button" value="Up" /></td>
-				<td rowspan="4"><input type="button" value="Delete" /></td>
+				<td rowspan="2">#1</td>
+				<td rowspan="8"><input type="button" value="Play" /></td>
+				<td rowspan="2"><input type="button" value="Play" /></td>
+				<td rowspan="2"><input type="text" value="E2" /></td>
+				<td rowspan="2"><input type="text" value="82" readonly="readonly" /></td>
+				<td><input type="button" value="Up" /></td>
+				<td rowspan="4"><input type="button" value="Up" /></td>
+				<td rowspan="2"><input type="button" value="Delete" /></td>
 				<td>&nbsp;</td>
 			</tr>
 			<tr>
 				<th>3</th>
-				<td>&nbsp;</td>
+				<td><input type="button" value="Down" /></td>
+				<td rowspan="2"><input type="button" value="Insert" /></td>
+				<td rowspan="2"><input type="button" value="Swap" /></td>
 			</tr>
 			<tr>
 				<th>4</th>
-				<td rowspan="2"><input type="button" value="Down" /></td>
-				<td rowspan="4"><input type="button" value="Insert" /></td>
-				<td rowspan="4"><input type="button" value="Swap" /></td>
+				<td rowspan="2">#2</td>
+				<td rowspan="2"><input type="button" value="Play" /></td>
+				<td rowspan="2">A<sub>2</sub></td>
+				<td rowspan="2">110</td>
+				<td><input type="button" value="Up" /></td>
+				<td rowspan="2"><input type="button" value="Delete" /></td>
 			</tr>
 			<tr>
 				<th>5</th>
+				<td><input type="button" value="Down" /></td>
+				<td rowspan="2"><input type="button" value="Insert" /></td>
+				<td rowspan="2"><input type="button" value="Swap" /></td>
 			</tr>
 			<tr>
 				<th>6</th>
-				<td rowspan="4">#2</td>
-				<td rowspan="4"><input type="button" value="Play" /></td>
-				<td rowspan="4">A<sub>2</sub></td>
-				<td rowspan="4">110</td>
-				<td rowspan="2"><input type="button" value="Up" /></td>
-				<td rowspan="4"><input type="button" value="Delete" /></td>
+				<td rowspan="2">#3</td>
+				<td rowspan="2"><input type="button" value="Play" /></td>
+				<td rowspan="2">D<sub>3</sub></td>
+				<td rowspan="2">147</td>
+				<td><input type="button" value="Up" /></td>
+				<td rowspan="4"><input type="button" value="Down" /></td>
+				<td rowspan="2"><input type="button" value="Delete" /></td>
 			</tr>
 			<tr>
 				<th>7</th>
+				<td><input type="button" value="Down" /></td>
+				<td rowspan="2"><input type="button" value="Insert" /></td>
+				<td rowspan="2"><input type="button" value="Swap" /></td>
 			</tr>
 			<tr>
 				<th>8</th>
-				<td rowspan="2"><input type="button" value="Down" /></td>
-				<td rowspan="4"><input type="button" value="Insert" /></td>
-				<td rowspan="4"><input type="button" value="Swap" /></td>
+				<td rowspan="2">#4</td>
+				<td rowspan="2"><input type="button" value="Play" /></td>
+				<td rowspan="2">G<sub>3</sub></td>
+				<td rowspan="2">196</td>
+				<td><input type="button" value="Up" /></td>
+				<td rowspan="2"><input type="button" value="Delete" /></td>
 			</tr>
 			<tr>
 				<th>9</th>
+				<td><input type="button" value="Down" /></td>
+				<td rowspan="2"><input type="button" value="Insert" /></td>
+				<td>&nbsp;</td>
 			</tr>
 			<tr>
 				<th>10</th>
-				<td rowspan="4">#3</td>
-				<td rowspan="4"><input type="button" value="Play" /></td>
-				<td rowspan="4">D<sub>3</sub></td>
-				<td rowspan="4">147</td>
-				<td rowspan="2"><input type="button" value="Up" /></td>
-				<td rowspan="8"><input type="button" value="Down" /></td>
-				<td rowspan="4"><input type="button" value="Delete" /></td>
-			</tr>
-			<tr>
-				<th>11</th>
-			</tr>
-			<tr>
-				<th>12</th>
-				<td rowspan="2"><input type="button" value="Down" /></td>
-				<td rowspan="4"><input type="button" value="Insert" /></td>
-				<td rowspan="4"><input type="button" value="Swap" /></td>
-			</tr>
-			<tr>
-				<th>13</th>
-			</tr>
-			<tr>
-				<th>14</th>
-				<td rowspan="4">#4</td>
-				<td rowspan="4"><input type="button" value="Play" /></td>
-				<td rowspan="4">G<sub>3</sub></td>
-				<td rowspan="4">196</td>
-				<td rowspan="2"><input type="button" value="Up" /></td>
-				<td rowspan="4"><input type="button" value="Delete" /></td>
-			</tr>
-			<tr>
-				<th>15</th>
-			</tr>
-			<tr>
-				<th>16</th>
-				<td rowspan="2"><input type="button" value="Down" /></td>
-				<td rowspan="4"><input type="button" value="Insert" /></td>
-				<td>&nbsp;</td>
-			</tr>
-			<tr>
-				<th>17</th>
-				<td>&nbsp;</td>
-			</tr>
-			<tr>
-				<th>18</th>
-				<td>&nbsp;</td>
-				<td>&nbsp;</td>
-				<td>&nbsp;</td>
-				<td>&nbsp;</td>
-				<td>&nbsp;</td>
-				<td>&nbsp;</td>
-				<td>&nbsp;</td>
-				<td>&nbsp;</td>
-				<td>&nbsp;</td>
-			</tr>
-			<tr>
-				<th>19</th>
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
@@ -338,7 +244,7 @@
 				<th>14</th>
 			</tr>
 			<tr>
-				<th>-2</th>
+				<th>0</th>
 				<td>&nbsp;</td>
 				<td rowspan="2">Tuning</td>
 				<td colspan="6">Transpositions</td>
@@ -346,7 +252,7 @@
 				<td rowspan="2">Edit</td>
 			</tr>
 			<tr>
-				<th>-1</th>
+				<th>1</th>
 				<td>&nbsp;</td>
 				<td>#1</td>
 				<td>#2</td>
@@ -362,7 +268,7 @@
 				<td>&sum;|&hellip;|</td>
 			</tr>
 			<tr>
-				<th>0</th>
+				<th>2</th>
 				<td rowspan="2">#1</td>
 				<td rowspan="2">Bass Guitar Standard</td>
 				<td rowspan="2">E2</td>
@@ -380,11 +286,11 @@
 				<td>&nbsp;</td>
 			</tr>
 			<tr>
-				<th>1</th>
+				<th>3</th>
 				<td rowspan="3"><input type="button" value="Swap" /></td>
 			</tr>
 			<tr>
-				<th>2</th>
+				<th>4</th>
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 				<td>-4</td>
@@ -401,7 +307,7 @@
 				<td>135</td>
 			</tr>
 			<tr>
-				<th>3</th>
+				<th>5</th>
 				<td rowspan="2">#2</td>
 				<td rowspan="2">Bass Guitar Open C</td>
 				<td rowspan="2">C2</td>
@@ -418,11 +324,11 @@
 				<td rowspan="2">&nbsp;</td>
 			</tr>
 			<tr>
-				<th>4</th>
+				<th>6</th>
 				<td rowspan="3"><input type="button" value="Swap" /></td>
 			</tr>
 			<tr>
-				<th>5</th>
+				<th>7</th>
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 				<td>+2</td>
@@ -439,7 +345,7 @@
 				<td>90</td>
 			</tr>
 			<tr>
-				<th>6</th>
+				<th>8</th>
 				<td rowspan="2">#3</td>
 				<td rowspan="2">Bass Guitar Step Down</td>
 				<td rowspan="2">D2</td>
@@ -456,7 +362,7 @@
 				<td rowspan="2">&nbsp;</td>
 			</tr>
 			<tr>
-				<th>7</th>
+				<th>9</th>
 				<td>&nbsp;</td>
 			</tr>
 		</table>
