Finished rebuilding the magic panels.

--- a/etc/layout.html
+++ b/etc/layout.html
@@ -258,14 +258,14 @@
 				<td>#2</td>
 				<td>#3</td>
 				<td>#4</td>
-				<td>&sum;&hellip;</td>
-				<td>&sum;|&hellip;|</td>
+				<td>&sum;&Delta;</td>
+				<td>&sum;|&Delta;|</td>
 				<td>#1</td>
 				<td>#2</td>
 				<td>#3</td>
 				<td>#4</td>
-				<td>&sum;&hellip;</td>
-				<td>&sum;|&hellip;|</td>
+				<td>&sum;&Delta;</td>
+				<td>&sum;|&Delta;|</td>
 			</tr>
 			<tr>
 				<th>2</th>
